--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,65 @@
     <groupId>groupId</groupId>
     <artifactId>HueSDK</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
-    
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>1.8</version>
+                <executions>
+                    <execution>
+                        <phase>generate-resources</phase>
+                        <configuration>
+                            <tasks>
+                                <echo message="unzipping compiled" />
+                                <unjar src="./HueSDK/Linux/huecppsdk-wrapper.jar" dest="${project.build.outputDirectory}" />
+                                <echo message="unzipping JavaDoc" />
+                                <unjar src="./HueSDK/Linux/huecppsdk-wrapper-javadoc.jar" dest="${project.build.directory}/javadoc" />
+                            </tasks>
+                        </configuration>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin><plugin>
+            <artifactId>maven-resources-plugin</artifactId>
+            <version>2.6</version>
+            <executions>
+                <execution>
+                    <id>copy-javadoc</id>
+                    <!-- here the phase you need -->
+                    <phase>generate-resources</phase>
+                    <goals>
+                        <goal>copy-resources</goal>
+                    </goals>
+                    <configuration>
+                        <outputDirectory>${project.build.directory}/apidocs</outputDirectory>
+                        <resources>
+                            <resource>
+                                <directory>${project.build.directory}/javadoc/huesdkresources-javadoc.jar</directory>
+                                <filtering>true</filtering>
+                            </resource>
+                        </resources>
+                    </configuration>
+                </execution>
+            </executions>
+        </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.0.0</version>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
